--- a/README
+++ b/README
@@ -1,3 +1,35 @@
+The file install.html may have additional information...
 
-See docs/index.html for information about this software, Installation
+First:
+
+    Build and install bes and netcdf_handler projects.
+    Launch the netcdf_handler/opendapserver
+
+Check it out:
+
+    svn co http://scm.opendap.org:8090/svn/trunk/olfs
+
+Build it:
+
+    ant -f buildfiles/s4.xml server
+
+Install it:
+
+    cp build/dist/opendap.war $TOMCAT_HOME/webapps rm -rf $TOMCAT_HOME/webapps/s4
+
+Launch it:
+
+    $TOMCAT_HOME/bin/startup.sh
+
+Configure it:
+
+    vi $TOMCAT_HOME/webapps/opendap/WEB-INF/web.xml
+    (Adjust the values of BackEndServer, BackEndServerPort)
+
+Relaunch it:
+
+    $TOMCAT_HOME/bin/shutdown.sh $TOMCAT_HOME/bin/startup.sh
+
+
+See doc/index.html for information about this software, Installation
 instructions and News.
