--- a/src/opendap/metacat/README
+++ b/src/opendap/metacat/README
@@ -27,3 +27,6 @@ DDX URLs into the NODC GHRSST Server:
 
 http://data.nodc.noaa.gov/opendap/ghrsst/L4/AUS/ABOM/RAMSSA_09km/2008/092/20080401-ABOM-L4HRfnd-AUS-v01-fv02_0-RAMSSA_09km.nc.bz2.ddx
 http://data.nodc.noaa.gov/opendap/ghrsst/L4/GAL/EUR/ODYSSEA/2008/023/20080123-EUR-L4UHRfnd-GAL-v01-fv01-ODYSSEA.nc.bz2.ddx
+
+Other datasets that are part of the Ocean Use case:
+The HYCOM site, our AVHRR site and the JPL MODIS site - all in the Matlab toolbox thing.
