Changed the default BES port to 10022 because of a conflict on CentOS 6

--- a/README
+++ b/README
@@ -7,11 +7,15 @@ First:
 
 Check it out:
 
-    svn co http://scm.opendap.org:8090/svn/trunk/olfs
+    svn co http://scm.opendap.org/svn/trunk/olfs
 
 Build it:
 
     ant server
+
+Make a distribution for release:
+
+    ant server -DHYRAX_VERSION=<num> -DOLFS_VERSION=<num>
 
 Install it:
 
