olfs: Merged 1.9.0 branch to trunk using 1.9.3 tag. Created 1.9.4 tag

--- a/resources/WCS/distribution/README
+++ b/resources/WCS/distribution/README
@@ -25,10 +25,10 @@ To install the WCS:
 
         http://the.machine.on.which.you.are.running.tomcat:8080/WCS/
 
-   for to see the default presenttion page for the WCS.
+   in order to see the default presentation page for the WCS.
 
 
-5) Find i additional instructions and information here:
+5) Find additional instructions and information here:
 
        http://docs.opendap.org/index.php/WCS_Service_version_1.1
 
