--- a/README
+++ b/README
@@ -1,9 +1,15 @@
+
+########################## Hyrax/OLFS ##########################
+
+Updated for version 1.10.0
+
 The file install.html or docs/index.html may have additional information...
 
 First:
 
-    Build and install bes and netcdf_handler projects.
-    Launch the netcdf_handler/opendapserver
+    Build and install bes and at minimum the netcdf_handler projects.
+    Launch the bes (you can use besctl to do that). 
+    Make sure there s a beslistener process runnning.
 
 Check it out:
 
@@ -13,27 +19,26 @@ Build it:
 
     ant server
 
-Make a distribution for release:
-
-    ant server -DHYRAX_VERSION=<num> -DOLFS_VERSION=<num>
+(To make a distribution for release:  ant server -DHYRAX_VERSION=<num> -DOLFS_VERSION=<num> )
 
 Install it:
 
-    rm -rf $TOMCAT_HOME/webapps/opendap
+    rm -rf $CATALINA_HOME/webapps/opendap*
     cp build/dist/opendap.war $TOMCAT_HOME/webapps
 
 Launch it:
 
-    $TOMCAT_HOME/bin/startup.sh
+    $CATALINA_HOME/bin/startup.sh
 
 Configure it:
 
-    vi $TOMCAT_HOME/webapps/opendap/WEB-INF/web.xml
-    (Adjust the values of BackEndServer, BackEndServerPort)
+    vi $CATALINA_HOME/content/opendap/olfs.xml
+    (If your beslistener is not running on localhost:10022 then besure to adjust the <host> and <port>
+    values to reflect your situation)
 
 Relaunch it:
 
-    $TOMCAT_HOME/bin/shutdown.sh $TOMCAT_HOME/bin/startup.sh
+    $CATALINA_HOME/bin/shutdown.sh; $CATALINA_HOME/bin/startup.sh
 
 
 See http://docs.opendap.org/index.php/Hyrax for information about this software, Installation
