--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Version 1.11.0 (1 April 2014)
+
+Internal (but as yet not fully released support) for DAP4 responses,
+along with stored_result/asynchronous behavior
+Bug fixes.
+Major changes to internal API.
+
+
 Version 1.10.0 (11 September 2013)
 
 
