olfs: Prerelease check in for version 1.11.0

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+2014-04-01  Nathan Potter <ndp@opendap.org>
+
+	olfs: Updated README, ChangeLog, News
+
+2014-03-31  Nathan Potter <ndp@opendap.org>
+
+	olfs: Fixed test classpath
+
+2014-03-31  Nathan Potter <ndp@opendap.org>
+
+	olfs: Changes in response to audit.
+
+2014-03-31  Nathan Potter <ndp@opendap.org>
+
+	olfs: Added processing to handle the HTTP response headers for the async behavior of the store_result requests.
+
+;; Local Variables:
+;; coding: utf-8
+;; End:
 2014-03-31  Nathan Potter <ndp@opendap.org>
 
 	olfs: Fixed test classpath
