--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 
 ########################## Hyrax/OLFS ##########################
 
-Updated for version 1.11.1
+Hyrax Version 1.9.7  (02 July 2014)
+OLFS  Version 1.11.3 (02 July 2014)
 
 The file install.html or docs/index.html may have additional information...
 
