--- a/README
+++ b/README
@@ -1,8 +1,7 @@
 
 ########################## Hyrax/OLFS ##########################
 
-Hyrax Version 1.9.7  (02 July 2014)
-OLFS  Version 1.11.3 (02 July 2014)
+Updated for version 1.11.1
 
 The file install.html or docs/index.html may have additional information...
 
