--- a/README
+++ b/README
@@ -10,7 +10,7 @@ First:
 
     Build and install bes and at minimum the netcdf_handler projects.
     Launch the bes (you can use besctl to do that). 
-    Make sure there s a beslistener process runnning.
+    Make sure there s a beslistener process running.
 
 Check it out:
 
@@ -26,7 +26,7 @@ Build it:
 Install it:
 
     rm -rf $CATALINA_HOME/webapps/opendap*
-    cp build/dist/opendap.war $TOMCAT_HOME/webapps
+    cp build/dist/opendap.war $CATALINA_HOME/webapps
 
 Launch it:
 
@@ -35,7 +35,7 @@ Launch it:
 Configure it:
 
     vi $CATALINA_HOME/content/opendap/olfs.xml
-    (If your beslistener is not running on localhost:10022 then besure to adjust the <host> and <port>
+    (If your beslistener is not running on localhost:10022 then be sure to adjust the <host> and <port>
     values to reflect your situation)
 
 Relaunch it:
@@ -44,4 +44,10 @@ Relaunch it:
 
 
 See http://docs.opendap.org/index.php/Hyrax for information about this software, Installation
-instructions and News.
+instructions and NEWS.
+
+## About the Aggregation servlet
+
+In src/opendap/aggregation we have a servlet that performs aggregation for use,
+initially, with NASA's EDSC (Earth Data Search Client). In that directory you
+will find a README along with some help in testing the servlet using curl.
